--- a/puzzle.html
+++ b/puzzle.html
@@ -65,6 +65,7 @@
 
 
     <script src="library/database.js"></script>
+    <script src="library/soundData.js"></script>
     <script src="library/subDatabase.js"></script>
     <script src="library/ratioTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
