--- a/puzzle.html
+++ b/puzzle.html
@@ -51,7 +51,7 @@
         <p>1. 游戏开始后，根据选择的种子，系统会随机选择两张卡牌作为起始卡和目标卡。</p>
         <p>2. 您的任务是找出一条这两张卡牌之间的关联路径。</p>
         <p>3. 您可以通过点击相关按钮来选择可能的卡牌关联方式，随后在符合条件的卡中选择你需要的那一张。</p>
-        <p>4. 目前版本，关联路径可以是同卡包同职业卡，衍生/被衍生关系，或者是重印卡。</p>
+        <p>4. 目前版本，关联路径可以是同卡包同职业卡，衍生/被衍生关系，重印卡，或者是共用一个特殊身材。</p>
         <p>5. 重印的定义为完全一样效果和名字，只有卡图不同的卡（不计异画）。</p>
         <p>6. 你可以调转方向从结果倒推。如果出现了失误，可以撤回一步。</p>
     </div>
