--- a/sameChara.html
+++ b/sameChara.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>这些是同一角色！</h1>
+    <p style="text-align: center;">影之诗复刻数据库测试</p>
     <hr> <!-- 这是分割线 -->
     <div id="result"></div>
     <script src="library/database.js"></script>
