--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 <hr> <!-- 这是分割线 -->
 
 <li>
+<a href="sameChara.html">复刻数据库（搭建中）</a>
+<span> - 查看影之诗卡牌复刻数据库</span>
+</li>
+
+<li>
 <a href="tokens.html">影之诗Token</a>
 <span> - 查看所有影之诗被衍生的卡牌（包括可加入构筑的卡牌与自衍生）被调用的次数</span>
 </li>
