--- a/sameChara0.html
+++ b/sameChara0.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>这些是同一角色！</title>
-    <link rel="stylesheet" href="sameChara.css">
+    <link rel="stylesheet" href="sameChara0.css">
 
 </head>
 <body>
     <h1>这些是同一角色！</h1>
-    <p style="text-align: center;">影之诗复刻数据库测试（法术/护符）</p>
+    <p style="text-align: center;">影之诗复刻数据库测试（随从）</p>
     <hr> <!-- 这是分割线 -->
     <div id="result"></div>
     <script src="library/database.js"></script>
     <script src="library/subDatabase.js"></script>
-    <script src="library/spellAlt.js"></script>
-    <script src="sameChara.js"></script>
+    <script src="library/followerAlt.js"></script>
+    <script src="sameChara0.js"></script>
 </body>
 </html>
