--- a/guess.html
+++ b/guess.html
@@ -281,8 +281,11 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
-             <span style="display: inline-block; width: 140px;">2023/09/05</span>调整了自buff判定：减费和增幅类不再归入此类
+             <span style="display: inline-block; width: 140px;">2023/09/19</span>修复了部分场上随从判定的误判；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了“奶满”词条。
 
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/09/05</span>调整了自buff判定：减费和增幅类不再归入此类
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/29</span>套娃类重处理：依然算母类，只是额外增加'套娃'词条
