--- a/cross.html
+++ b/cross.html
@@ -59,6 +59,11 @@
     <script src="library/soundData.js"></script>
     <script src="library/subDatabase.js"></script>
     <script src="library/ratioTable.js"></script>
+    <script src="library/flavorbase.js"></script>
+    <script src="library/changeLog.js"></script>
+    <script src="library/differLog.js"></script>
+    <script src="library/spellAlt.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
     <script src="crossFilter.js"></script>
     <script src="similarity.js"></script>
