--- a/cross.html
+++ b/cross.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cross.css">
-    <title>寻找连线</title>
+    <title>瞎逗霸死Connections</title>
 </head>
 <body>
-  <h1>影之诗连线大师（beta）</h1>
+  <h1>影之诗分组大师（beta）</h1>
     <div id="startBox">
         <div id="subStartBox">
             <button id="randomSeedButton">今日谜题种子</button>
@@ -35,7 +35,7 @@
             <!-- 游戏结果将在游戏结束后显示 -->
         </div>
         <div id="buttons">
-          <button id="fourButton">检验连线</button>
+          <button id="fourButton">检验分组</button>
           <a href="https://shadowverse-portal.com/cards?format=1&lang=zh-tw" target="_blank" id="link-button">前往 Shadowverse Portal</a>
         </div>
     </div>
@@ -52,6 +52,7 @@
             <a href="yuwan.html">听声辨卡部门</a>
             <a href="guess.html">猜卡部门</a>
             <a href="picGuess.html">卡图部门</a>
+            <a href="puzzle.html">关联部门</a>
         </li></div>
 
 
