--- a/guess.html
+++ b/guess.html
@@ -399,6 +399,7 @@
            <a href="yuwan.html">听声辨卡部门</a>
            <a href="picGuess.html">卡图部门</a>
            <a href="puzzle.html">关联部门</a>
+           <a href="cross.html">分组部门</a>
        </li></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
