--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 <span> - 测试你是否对影之诗的卡包与token足够了解</span>
 </li>
 
+<li>
+<a href="cross.html">影之诗连线（beta）</a>
+<span> - 影之诗综合考试！将给定的卡进行正确的分组。</span>
+</li>
+
 <hr> <!-- 这是分割线 -->
 
 <li>
