--- a/puzzle.html
+++ b/puzzle.html
@@ -61,6 +61,7 @@
             <a href="yuwan.html">听声辨卡部门</a>
             <a href="guess.html">猜卡部门</a>
             <a href="picGuess.html">卡图部门</a>
+            <a href="cross.html">分组部门</a>
         </li></div>
 
 
