--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </li>
 
 <li>
-<a href="cross.html">影之诗连线（beta）</a>
+<a href="cross.html">影之诗分组（beta）</a>
 <span> - 影之诗综合考试！将给定的卡进行正确的分组。</span>
 </li>
 
