--- a/cross.html
+++ b/cross.html
@@ -45,6 +45,53 @@
         <p>2. 所有卡均只符合自己相关的词条，不会符合其他任何词条。</p>
         <p>3. 游戏计划是将属于同一词条的X张卡分出来。</p>
         <p>4. 因为是随机抽卡，也许会有X张卡同时具有某个非目标词条——检查一下是否有其他卡也符合，如果是的话，这就不是正确的一组。</p>
+
+        <h2>常见问题解答</h2>
+        <details>
+            <summary>1. 系统会选择哪些卡牌作为解谜目标？</summary>
+            <p>系统会从已有的卡牌数据库中随机选择一张卡牌作为解谜目标（包含token，不包含异画）。</p>
+            <p>目前数据库截止至：密斯塔尔希亚的英雄，DLC后</p>
+        </details>
+        <details>
+            <summary>2. 我连了X张有同特征的卡，但是并没有通过！</summary>
+            <p>由于随机数之神的原因，确实有可能有一些卡被分到一些没有被选中的词条。</p>
+            <p>你可以检查剩下的卡是否还能找出同类项，或者有没有也符合这个特征的卡。</p>
+            <p>实在不行就用试错法吧（</p>
+        </details>
+        <details>
+            <summary>3. 简单词条和困难词条有什么区别？</summary>
+            <p>简单词条基本就是围绕卡自身且相对明显的效果。</p>
+            <p>困难词条会是卡一些平时不太注意到的部分、szb的历史相关内容、和其他卡的联动、或者一些更坑爹的内容。</p>
+            <p>你可以通过结果的颜色来判别是否是简单词条；两个简单词条的背景分别是绿色和青色。（</p>
+        </details>
+        <details>
+            <summary>4. 关于词条扩充</summary>
+            <p>词条库还在扩充优化中。如果你有任何建议，欢迎联系作者</p>
+        </details>
+        <details>
+            <summary>5. 每天生成的种子是固定的吗？</summary>
+            <p>是的。如果你想要玩别的，你可以输入之前的种子。</p>
+            <p>这么做的理由：</p>
+            <li>1、其他猜词游戏也是这么做的（</li>
+            <li>2、可以让你和狱友讨论今日卡牌，当然要小心被剧透</li>
+            <li>3、如果你暂时卡关了，可以暂停片刻，之后回来继续！</li>
+            <p>当然，如果你想玩更多，你可以随便输入一些东西作为种子（种子可以是任何语言，包括中文）！你还可以把你脸滚键盘生成的种子分享给群友（</p>
+        </details>
+        <details>
+            <summary>6. 过去的谜题</summary>
+            <p id="functionContent"></p>
+        </details>
+        <details>
+          <summary>7. 更新记录</summary>
+          <ul style="list-style-type: none; padding: 0;">
+            <li style="margin-left: 20px;">
+              <span style="display: inline-block; width: 140px;">2023/09/23</span>增加了部分困难词条；<br>
+
+            <li style="margin-left: 20px;">
+              <span style="display: inline-block; width: 140px;">2023/09/22</span>beta上线
+            </li>
+          </ul>
+        </details>
     </div>
 
     <div class="footer" id="other">         <li>
