--- a/cross.html
+++ b/cross.html
@@ -17,8 +17,8 @@
         </div>
         <select id="difficultySelect">
           <option value="easy" title="3*3，其中会有一个困难词条和两个普通词条">简单</option>
-          <option value="medium" selected title="4*4，其中会有两个困难词条和两个普通词条">标准</option>
-          <option value="hard" title="5*5，其中会有三个困难词条和两个普通词条">困难</option>
+          <option value="medium" selected title="4*4，其中会有一个噩梦词条、一个困难词条和两个普通词条">标准</option>
+          <option value="hard" title="5*5，其中会有一个噩梦词条、两个困难词条和两个普通词条">困难</option>
         </select>
         <div class="center-button">
             <button id="useSeedButton">开始游戏</button>
@@ -61,8 +61,9 @@
         <details>
             <summary>3. 简单词条和困难词条有什么区别？</summary>
             <p>简单词条基本就是围绕卡自身且相对明显的效果。</p>
-            <p>困难词条会是卡一些平时不太注意到的部分、szb的历史相关内容、和其他卡的联动、或者一些更坑爹的内容。</p>
-            <p>你可以通过结果的颜色来判别是否是简单词条；两个简单词条的背景分别是绿色和青色。（</p>
+            <p>困难词条会是卡一些平时不太注意到的部分、szb的历史相关内容、和其他卡的联动。</p>
+            <p>噩梦词条简而言之是……一些更坑爹的内容。</p>
+            <p>你可以通过结果的颜色来判别是否是简单词条；两个简单词条的背景分别是绿色和青色。噩梦词条的背景必为紫色。</p>
         </details>
         <details>
             <summary>4. 关于词条扩充</summary>
@@ -86,6 +87,7 @@
           <ul style="list-style-type: none; padding: 0;">
             <li style="margin-left: 20px;">
               <span style="display: inline-block; width: 140px;">2023/09/23</span>增加了部分困难词条；<br>
+              <span style="display: inline-block; width: 140px;">2023/09/23</span>将困难词条里难度较大的部分改为噩梦词条。
 
             <li style="margin-left: 20px;">
               <span style="display: inline-block; width: 140px;">2023/09/22</span>beta上线
