--- a/test2.html
+++ b/test2.html
@@ -38,8 +38,8 @@
                             }
                         }
 
-                        //displayData(dataArray);
-                        displayData(soundArray);
+                        displayData(dataArray);
+                        //displayData(soundArray);
                     }
                 });
             }
