--- a/cross.html
+++ b/cross.html
@@ -86,6 +86,9 @@
           <summary>7. 更新记录</summary>
           <ul style="list-style-type: none; padding: 0;">
             <li style="margin-left: 20px;">
+              <span style="display: inline-block; width: 140px;">2023/09/27</span>更新了新版本内容“变革的恒规”。
+
+            <li style="margin-left: 20px;">
               <span style="display: inline-block; width: 140px;">2023/09/23</span>增加了部分困难词条；<br>
               <span style="display: inline-block; width: 140px;">2023/09/23</span>将困难词条里难度较大的部分改为噩梦词条。
 
