--- a/guess.html
+++ b/guess.html
@@ -281,6 +281,10 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/09/28</span>优化了部分数据库词条读取；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了自残词条判断。
+
+           <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/09/27</span>更新了新版本内容“变革的恒规”。
 
            <li style="margin-left: 20px;">
