--- a/cross.html
+++ b/cross.html
@@ -86,6 +86,9 @@
           <summary>7. 更新记录</summary>
           <ul style="list-style-type: none; padding: 0;">
             <li style="margin-left: 20px;">
+              <span style="display: inline-block; width: 140px;">2023/10/03</span>修复了一个判定错误。
+
+            <li style="margin-left: 20px;">
               <span style="display: inline-block; width: 140px;">2023/09/27</span>更新了新版本内容“变革的恒规”。
 
             <li style="margin-left: 20px;">
