--- a/guess.html
+++ b/guess.html
@@ -281,6 +281,9 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/10/10</span>优化了部分词条判定；
+
+           <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/09/28</span>优化了部分数据库词条读取；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了自残词条判断。
 
