--- a/guess.html
+++ b/guess.html
@@ -281,6 +281,9 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/10/11</span>小幅优化了描述文字判定；
+
+           <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/10/10</span>优化了部分词条判定；
 
            <li style="margin-left: 20px;">
