--- a/guess.html
+++ b/guess.html
@@ -225,7 +225,7 @@
        <details>
            <summary>1. 系统会选择哪些卡牌作为解谜目标？</summary>
            <p>系统会从已有的卡牌数据库中随机选择一张卡牌作为解谜目标（包含token，不包含异画）。</p>
-           <p>目前数据库截止至：变革的恒规，DLC前</p>
+           <p>目前数据库截止至：传说复苏，DLC前</p>
            <p>如果你选择了指定模式，那么系统只会选指定模式可能出现的卡（注意，有可能会是一张指定卡衍生的token或无限制卡牌！）。</p>
        </details>
        <details>
@@ -280,6 +280,9 @@
        <details>
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/12/29</span>更新到了传说复苏，DLC前；
+
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/10/11</span>小幅优化了描述文字判定；
 
