--- a/cross.html
+++ b/cross.html
@@ -50,7 +50,7 @@
         <details>
             <summary>1. 系统会选择哪些卡牌作为解谜目标？</summary>
             <p>系统会从已有的卡牌数据库中随机选择一张卡牌作为解谜目标（包含token，不包含异画）。</p>
-            <p>目前数据库截止至：密斯塔尔希亚的英雄，DLC后</p>
+            <p>目前数据库截止至：传说复苏，DLC前</p>
         </details>
         <details>
             <summary>2. 我连了X张有同特征的卡，但是并没有通过！</summary>
@@ -85,6 +85,9 @@
         <details>
           <summary>7. 更新记录</summary>
           <ul style="list-style-type: none; padding: 0;">
+            <li style="margin-left: 20px;">
+              <span style="display: inline-block; width: 140px;">2023/12/29</span>更新到了传说复苏，DLC前；
+
             <li style="margin-left: 20px;">
               <span style="display: inline-block; width: 140px;">2023/10/03</span>修复了一个判定错误。
 
