--- a/kmrsb.html
+++ b/kmrsb.html
@@ -39,7 +39,9 @@
 
     <div id="victory-message" class="hidden">
         <h1>胜利！</h1>
-        <p>你花了 <span id="total-time">0</span> 秒打败了KMR。</p>
+        <p>当前为 <span id="total-level">1</span> 周目。</p>
+        <p>你在当前周目花了 <span id="total-time">0</span> 秒打败了KMR。</p>
+        <p>总计花了 <span id="total-time2">0</span> 秒。</p>
         <p>每个随从/点击的输出：</p>
         <ul id="final-stats">
             <!-- Final stats will be shown here -->
