--- a/kmrsb.html
+++ b/kmrsb.html
@@ -46,7 +46,7 @@
         <ul id="final-stats">
             <!-- Final stats will be shown here -->
         </ul>
-        <button onclick="restartGame()">重新开始</button>
+        <button onclick="restartGame()">下一周目</button>
     </div>
     <audio id="hit-sound" src="kmr/hit.ogg"></audio>
     <script src="kmr/minion.js"></script>
