--- a/kmrsb.html
+++ b/kmrsb.html
@@ -16,6 +16,8 @@
               <!-- Minion damage stats will be shown here -->
           </ul>
       </div>
+      <button id="saveButton">保存游戏</button>
+<button id="loadButton">读取游戏</button>
   </div>
 
     <div class="game-container">
