--- a/kmrsb.html
+++ b/kmrsb.html
@@ -17,6 +17,9 @@
           </ul>
       </div>
 <button id="saveButton">手动保存</button>
+<button id="exportButton">下载存档</button>
+<input type="file" id="importInput" style="display:none;">
+<button id="importButton">导入本地存档</button>
 <button id="rsButton">硬重置游戏</button>
   </div>
 
