--- a/kmrsb.html
+++ b/kmrsb.html
@@ -17,9 +17,13 @@
           </ul>
       </div>
 <button id="saveButton">手动保存</button>
-<button id="exportButton">下载存档</button>
-<input type="file" id="importInput" style="display:none;">
-<button id="importButton">导入本地存档</button>
+
+<div>每个助战造成的伤害:
+  <button id="exportButton">下载存档</button>
+  <input type="file" id="importInput" style="display:none;">
+  <button id="importButton">导入本地存档</button>
+</div>
+
 <button id="rsButton">硬重置游戏</button>
   </div>
 
