--- a/kmrsb.html
+++ b/kmrsb.html
@@ -18,7 +18,7 @@
       </div>
 <button id="saveButton">手动保存</button>
 
-<div>每个助战造成的伤害:
+<div>
   <button id="exportButton">下载存档</button>
   <input type="file" id="importInput" style="display:none;">
   <button id="importButton">导入本地存档</button>
