--- a/kmrsb.html
+++ b/kmrsb.html
@@ -25,6 +25,21 @@
 </div>
 
 <button id="rsButton">硬重置游戏</button>
+
+<button id="helpButton">帮助</button>
+  </div>
+
+  <div id="helpModal" class="modal">
+      <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>游戏帮助</h2>
+          <p>最新版本：V2.4.1.</p>
+          <p>未进行手机端适配，建议使用电脑游玩。</p>
+          <p>每次解锁助战，你有2次机会重新抽取，每局游戏前2次重抽免费。如果将助战升级则不能再重抽。</p>
+          <p>按住Ctrl可以一键升级单个助战。</p>
+          <p>游戏存档在浏览器缓存中，但是缓存可能会自我清理，尤其是更新游戏需要清除浏览器缓存。如果您不想丢档，建议结束游戏前手动下载存档。</p>
+          <p>游戏作者：星导过星导。如有bug与反馈请联系。</p>
+      </div>
   </div>
 
     <div class="game-container">
