--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 <span> - 影之诗综合考试！将给定的卡进行正确的分组。</span>
 </li>
 
+<li>
+<a href="kmrsb.html">挑战kmr（更新中）</a>
+<span> - byd跳票辣，快来一起围攻光明顶战胜kmr吧。</span>
+</li>
+
+
 <hr> <!-- 这是分割线 -->
 
 <li>
