--- a/kmrsb.html
+++ b/kmrsb.html
@@ -49,6 +49,7 @@
           <div id="kmr-health" style="width: 100%;">500,000</div>
           <img src="kmr/kmr.jpg" alt="KMR" id="kmr">
       </div>
+              <div>周目: <span id="phase-level">0</span></div>
               <div>金币: <span id="coins">0</span></div>
               <button id='unlockButton' onclick="unlockRandMinion()"> 抽取助战 (金币: 10)</button>
             <button onclick="autoupgradeMinion()">一键升级</button>
