--- a/kmrsb.html
+++ b/kmrsb.html
@@ -33,11 +33,12 @@
       <div class="modal-content">
           <span class="close">&times;</span>
           <h2>游戏帮助</h2>
-          <p>最新版本：V2.4.8.</p>
+          <p>最新版本：V2.5.</p>
           <p>未进行手机端适配，建议使用电脑游玩。</p>
           <p>每次解锁助战，你有2次机会重新抽取，每局游戏前2次重抽免费。如果将助战升级则不能再重抽。</p>
           <p>按住Ctrl可以一键升级单个助战。</p>
           <p>游戏存档在浏览器缓存中，但是缓存可能会自我清理，尤其是更新游戏需要清除浏览器缓存。如果您不想丢档，建议结束游戏前手动下载存档。</p>
+          <p>转生可以获得以太，每个获得过的以太增加5%伤害。（目前没有其他作用，将在后续版本更新）</p>
           <p>游戏作者：星导过星导。如有bug与反馈请联系。</p>
       </div>
   </div>
@@ -51,8 +52,10 @@
       </div>
               <div>周目: <span id="phase-level">0</span></div>
               <div>金币: <span id="coins">0</span></div>
+              <div id="ether-container">以太: <span id="ethers">0 (0)</span></div>
               <button id='unlockButton' onclick="unlockRandMinion()"> 抽取助战 (金币: 10)</button>
             <button onclick="autoupgradeMinion()">一键升级</button>
+            <button id="softRsButton" onclick="softReset()">转生</button>
         <div class="minions-container" id="minions-container">
             <!-- Minion info will be inserted here dynamically -->
         </div>
