--- a/kmrsb.html
+++ b/kmrsb.html
@@ -38,7 +38,7 @@
           <p>每次解锁助战，你有2次机会重新抽取，每局游戏前2次重抽免费。如果将助战升级则不能再重抽。</p>
           <p>按住Ctrl可以一键升级单个助战。</p>
           <p>游戏存档在浏览器缓存中，但是缓存可能会自我清理，尤其是更新游戏需要清除浏览器缓存。如果您不想丢档，建议结束游戏前手动下载存档。</p>
-          <p>转生可以获得以太，每个获得过的以太增加5%伤害。（目前没有其他作用，将在后续版本更新）</p>
+          <p>10周目以上可以转生。通过转生可以获得以太，每个获得过的以太增加5%伤害。（目前没有其他作用，将在后续版本更新）</p>
           <p>游戏作者：星导过星导。如有bug与反馈请联系。</p>
       </div>
   </div>
