--- a/kmrsb.html
+++ b/kmrsb.html
@@ -96,7 +96,7 @@
     </div>
 
     <audio id="hit-sound" src="kmr/hit.ogg"></audio>
-
+    <script src='kmr/decimal/decimal.js'></script>
     <script src="kmr/bonds.js"></script>
     <script src="kmr/minion.js"></script>
     <script src="kmr/game.js"></script>
