--- a/kmrsb.html
+++ b/kmrsb.html
@@ -27,13 +27,14 @@
 <button id="rsButton">硬重置游戏</button>
 
 <button id="helpButton">帮助</button>
+
   </div>
 
   <div id="helpModal" class="modal">
       <div class="modal-content">
           <span class="close">&times;</span>
           <h2>游戏帮助</h2>
-          <p>最新版本：V3.0.0.</p>
+          <p>最新版本：V3.0.1.</p>
           <p>未进行手机端适配，建议使用电脑游玩。</p>
           <p>每次解锁助战，你有2次机会重新抽取，每局游戏前2次重抽免费。如果将助战升级则不能再重抽。</p>
           <p>按住Ctrl可以一键升级单个助战。</p>
@@ -41,6 +42,17 @@
           <p>10周目以上可以转生。通过转生可以获得以太，每个获得过的以太增加2.5%伤害。</p>
           <p>以太可以用于抽取羁绊。只有抽齐羁绊中的全部助战，羁绊才会生效。</p>
           <p>游戏作者：星导过星导。如有bug与反馈请联系。</p>
+      </div>
+  </div>
+
+  <div id="AnnounceModal" class="modal">
+      <div class="modal-content">
+          <span id = "annClose" class="close">&times;</span>
+          <h2>公告</h2>
+          <p>最新版本：V3.0.1.</p>
+          <p>新版本更新内容：改用大数字系统，允许数字超出10^308</p>
+          <p>修改升级曲线，避免数字过大时导致的卡顿。下调了升级曲线。</p>
+          <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
 
