--- a/kmrsb.html
+++ b/kmrsb.html
@@ -52,6 +52,8 @@
           <p>最新版本：V3.0.1.</p>
           <p>新版本更新内容：改用大数字系统，允许数字超出10^308</p>
           <p>修改升级曲线，避免数字过大时导致的卡顿。下调了升级曲线。</p>
+          <p>修复了[乾坤一掷]的概率重置时会出错NAN的bug。</p>
+          <p>修复了部分加攻技能会错误使攻击力获得小数，随后与[造谣]配合会让攻击力迅速上升的bug。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
