--- a/kmrsb.html
+++ b/kmrsb.html
@@ -54,6 +54,8 @@
           <p>修改升级曲线，避免数字过大时导致的卡顿。下调了升级曲线。</p>
           <p>修复了[乾坤一掷]的概率重置时会出错NAN的bug。</p>
           <p>修复了部分加攻技能会错误使攻击力获得小数，随后与[造谣]配合会让攻击力迅速上升的bug。</p>
+          <p>对一些老英雄的成长技能进行了加强。</p>
+          <p>修复了刷新后如果免费重抽用完会多出2次免费重抽的bug。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
