--- a/kmrsb.html
+++ b/kmrsb.html
@@ -57,6 +57,10 @@
           <p>对一些老英雄的成长技能进行了加强。</p>
           <p>修复了刷新后如果免费重抽用完会多出2次免费重抽的bug。</p>
           <p>修复了[卓绝的契约]会导致很大的攻击力或NAN的bug。</p>
+          <p>修复了[成熟]不给自己减攻的bug。</p>
+          <p>修复了[虫法之王]参数可能会突然变大的bug。</p>
+          <p>下调[红娘]的数值以延缓指数爆炸。</p>
+          <p>[马纳利亚时刻]不再会出现无效技能或一次性技能。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
