--- a/kmrsb.html
+++ b/kmrsb.html
@@ -40,7 +40,7 @@
           <p>按住Ctrl可以一键升级单个助战。</p>
           <p>游戏存档在浏览器缓存中，但是缓存可能会自我清理，尤其是更新游戏需要清除浏览器缓存。如果您不想丢档，建议结束游戏前手动下载存档。</p>
           <p>10周目以上可以转生。通过转生可以获得以太，每个获得过的以太增加2.5%伤害。</p>
-          <p>以太可以用于抽取羁绊。只有抽齐羁绊中的全部助战，羁绊才会生效。</p>
+          <p>以太可以用于抽取羁绊。只有抽齐羁绊中的全部助战，羁绊才会生效。目前羁绊最高20级。</p>
           <p>游戏作者：星导过星导。如有bug与反馈请联系。</p>
       </div>
   </div>
