--- a/kmrsb.html
+++ b/kmrsb.html
@@ -61,6 +61,7 @@
           <p>修复了[虫法之王]参数可能会突然变大的bug。</p>
           <p>下调[红娘]的数值以延缓指数爆炸。</p>
           <p>[马纳利亚时刻]不再会出现无效技能或一次性技能。</p>
+          <p>修复了一个羁绊错误导致的NANbug</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
