--- a/kmrsb.html
+++ b/kmrsb.html
@@ -52,7 +52,8 @@
           <p>最新版本：V3.0.2.</p>
           <p>新版本更新内容：改用大数字系统，允许数字超出10^308</p>
           <p>修改升级曲线，避免数字过大时导致的卡顿。下调了升级曲线。</p>
-          <p>新英雄上线：Foyria。</p>
+          <p>优化光污染：每名助战头上最多同时有10个词条在跳。</p>
+          <p>3名新英雄上线。</p>
           <p>修改内容：</p>
           <p>修复了[乾坤一掷]的概率重置时会出错NAN的bug。</p>
           <p>修复了部分加攻技能会错误使攻击力获得小数，随后与[造谣]配合会让攻击力迅速上升的bug。</p>
@@ -64,7 +65,9 @@
           <p>下调[红娘]的数值以延缓指数爆炸。</p>
           <p>[马纳利亚时刻]不再会出现无效技能或一次性技能。</p>
           <p>修复了一个羁绊错误导致的NANbug</p>
+          <p>修复了一个羁绊错误导致的无敌战队bug</p>
           <p>修复了ykd的buff不生效的bug</p>
+          <p>上调了做法的概率，避免与[运气不如他们]联动造成卡顿。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
