--- a/kmrsb.html
+++ b/kmrsb.html
@@ -34,7 +34,7 @@
       <div class="modal-content">
           <span class="close">&times;</span>
           <h2>游戏帮助</h2>
-          <p>最新版本：V3.0.3.</p>
+          <p>最新版本：V3.0.4.</p>
           <p>未进行手机端适配，建议使用电脑游玩。</p>
           <p>每次解锁助战，你有2次机会重新抽取，每局游戏前2次重抽免费。如果将助战升级则不能再重抽。</p>
           <p>按住Ctrl可以一键升级单个助战。</p>
@@ -49,12 +49,12 @@
       <div class="modal-content">
           <span id = "annClose" class="close">&times;</span>
           <h2>公告</h2>
-          <p>最新版本：V3.0.3.</p>
+          <p>最新版本：V3.0.4.</p>
           <p>新版本更新内容：改用大数字系统，允许数字超出10^308</p>
           <p>修改升级曲线，避免数字过大时导致的卡顿。下调了升级曲线。</p>
           <p>优化光污染：每名助战头上最多同时有10个词条在跳。</p>
-          <p>3名新英雄上线。</p>
-          <p>因为卡顿问题，一键升级被自动升级按钮替代。仍然可以按住Ctrl可以一键升级单个助战。</p>
+          <p>4名新英雄上线。</p>
+          <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
           <p>修改内容：</p>
           <p>修复了[乾坤一掷]的概率重置时会出错NAN的bug。</p>
           <p>修复了部分加攻技能会错误使攻击力获得小数，随后与[造谣]配合会让攻击力迅速上升的bug。</p>
@@ -68,6 +68,7 @@
           <p>修复了一个羁绊错误导致的NANbug</p>
           <p>修复了一个羁绊错误导致的无敌战队bug</p>
           <p>修复了ykd的buff不生效的bug</p>
+          <p>修复了絮雨buff错误地不叠加的bug</p>
           <p>上调了做法的概率，避免与[运气不如他们]联动造成卡顿。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
