--- a/kmrsb.html
+++ b/kmrsb.html
@@ -69,6 +69,7 @@
           <p>修复了一个羁绊错误导致的无敌战队bug</p>
           <p>修复了ykd的buff不生效的bug</p>
           <p>修复了絮雨buff错误地不叠加的bug</p>
+          <p>优化了清鱼吃了羁绊左脚踩右脚太高的问题</p>
           <p>上调了做法的概率，避免与[运气不如他们]联动造成卡顿。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
