--- a/kmrsb.html
+++ b/kmrsb.html
@@ -56,21 +56,8 @@
           <p>4名新英雄上线。</p>
           <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
           <p>修改内容：</p>
-          <p>修复了[乾坤一掷]的概率重置时会出错NAN的bug。</p>
-          <p>修复了部分加攻技能会错误使攻击力获得小数，随后与[造谣]配合会让攻击力迅速上升的bug。</p>
-          <p>对一些老英雄的成长技能进行了加强。</p>
-          <p>修复了刷新后如果免费重抽用完会多出2次免费重抽的bug。</p>
-          <p>修复了[卓绝的契约]会导致很大的攻击力或NAN的bug。</p>
-          <p>修复了[成熟]不给自己减等级的bug。</p>
-          <p>修复了[虫法之王]参数可能会突然变大的bug。</p>
-          <p>下调[红娘]的数值以延缓指数爆炸。</p>
-          <p>[马纳利亚时刻]不再会出现无效技能或一次性技能。</p>
-          <p>修复了一个羁绊错误导致的NANbug</p>
-          <p>修复了一个羁绊错误导致的无敌战队bug</p>
-          <p>修复了ykd的buff不生效的bug</p>
-          <p>修复了絮雨buff错误地不叠加的bug</p>
           <p>优化了清鱼吃了羁绊左脚踩右脚太高的问题</p>
-          <p>上调了做法的概率，避免与[运气不如他们]联动造成卡顿。</p>
+          <p>修复了[老实猪猪]不是加攻而是加攻伤的bug</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
