--- a/kmrsb.html
+++ b/kmrsb.html
@@ -57,7 +57,7 @@
           <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
           <p>修改内容：</p>
           <p>优化了清鱼吃了羁绊左脚踩右脚太高的问题</p>
-          <p>修复了[老实猪猪]不是加攻而是加攻伤的bug</p>
+          <p>修复了[老实猪猪]不是加攻而是加攻伤的bug（顺便加强了一下）</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
       </div>
   </div>
