--- a/kmrsb.html
+++ b/kmrsb.html
@@ -55,6 +55,7 @@
           <p>优化光污染：每名助战头上最多同时有10个词条在跳。</p>
           <p>4名新英雄上线。</p>
           <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
+          <p>增加了双开时的警告</p>
           <p>修改内容：</p>
           <p>优化了清鱼吃了羁绊左脚踩右脚太高的问题</p>
           <p>修复了[老实猪猪]不是加攻而是加攻伤的bug（顺便加强了一下）</p>
