--- a/kmrsb.html
+++ b/kmrsb.html
@@ -34,7 +34,7 @@
       <div class="modal-content">
           <span class="close">&times;</span>
           <h2>游戏帮助</h2>
-          <p>最新版本：V3.0.7.</p>
+          <p>最新版本：V3.1.0.</p>
           <p>未进行手机端适配，建议使用电脑游玩。</p>
           <p>每次解锁助战，你有2次机会重新抽取，每局游戏前2次重抽免费。如果将助战升级则不能再重抽。</p>
           <p>按住Ctrl可以一键升级单个助战。</p>
@@ -49,19 +49,14 @@
       <div class="modal-content">
           <span id = "annClose" class="close">&times;</span>
           <h2>公告</h2>
-          <p>最新版本：V3.0.7.</p>
-          <p>新版本更新内容：改用大数字系统，允许数字超出10^308</p>
-          <p>修改升级曲线，避免数字过大时导致的卡顿。下调了升级曲线。</p>
-          <p>优化光污染：每名助战头上最多同时有10个词条在跳。</p>
-          <p>优化声音污染：最多同时只会播放10个语音（但未播放的仍享受技能增益）。</p>
-          <p>2名新英雄上线。</p>
+          <p>最新版本：V3.1.0.</p>
           <p>新机制：启动异能、临时助战。</p>
+          <p>2名新英雄上线。（最新英雄池大小：51）</p>
+          <p>增加了自动升级可以选择频率。</p>
           <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
-          <p>增加了双开时的警告</p>
           <p>修改内容：</p>
-          <p>优化了清鱼吃了羁绊左脚踩右脚太高的问题</p>
-          <p>修复了[老实猪猪]不是加攻而是加攻伤的bug（顺便加强了一下）</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
+          <p>疑似有猪猪偷吃内存的问题，之后会查（。</p>
       </div>
   </div>
 
