--- a/kmrsb.html
+++ b/kmrsb.html
@@ -50,11 +50,12 @@
           <span id = "annClose" class="close">&times;</span>
           <h2>公告</h2>
           <p>最新版本：V3.1.0.</p>
-          <p>新机制：启动异能、临时助战。</p>
+          <p>新机制：启动异能、临时助战、发现。</p>
           <p>2名新英雄上线。（最新英雄池大小：51）</p>
           <p>增加了自动升级可以选择频率。</p>
           <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
           <p>修改内容：</p>
+          <p>修复了龙娘攻速过慢时反而会狂A的bug。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
           <p>疑似有猪猪偷吃内存的问题，之后会查（。</p>
       </div>
