--- a/kmrsb.html
+++ b/kmrsb.html
@@ -56,6 +56,8 @@
           <p>因为后期卡顿问题，一键升级之外提供自动升级按钮的选项。仍然可以按住Ctrl可以一键升级单个助战。</p>
           <p>修改内容：</p>
           <p>修复了龙娘攻速过慢时反而会狂A的bug。</p>
+          <p>修复了一些数字过大时会跳Infinity或NaN的bug。</p>
+          <p>ban掉了仓仓一些摇出来没有主英雄=放屁或者负面的技能。</p>
           <p>可能还会有卡顿或者bug，之后会修（。</p>
           <p>疑似有猪猪偷吃内存的问题，之后会查（。</p>
       </div>
