--- a/kmrsb.html
+++ b/kmrsb.html
@@ -41,6 +41,7 @@
           <p>游戏存档在浏览器缓存中，但是缓存可能会自我清理，尤其是更新游戏需要清除浏览器缓存。如果您不想丢档，建议结束游戏前手动下载存档。</p>
           <p>10周目以上可以转生。通过转生可以获得以太，每个获得过的以太增加2.5%伤害。</p>
           <p>以太可以用于抽取羁绊。只有抽齐羁绊中的全部助战，羁绊才会生效。目前羁绊最高20级。</p>
+          <p>助战名字有颜色说明有对应状态：粉色-结婚，红蓝-buff，绿色-有可用启动。</p>
           <p>游戏作者：星导过星导。如有bug与反馈请联系。</p>
       </div>
   </div>
