--- a/swiss.html
+++ b/swiss.html
@@ -26,6 +26,12 @@
         <label for="calculateFirstRoundLoss">计算首轮输掉者出线率:</label>
         <input type="checkbox" id="calculateFirstRoundLoss" name="calculateFirstRoundLoss">
         <br>
+        <label for="calculateTwoRoundLoss">计算前两轮输掉者出线率:</label>
+        <input type="checkbox" id="calculateTwoRoundLoss" name="calculateTwoRoundLoss">
+        <br>
+        <label for="calculat1-1RoundLoss">计算前两轮1-1出线率:</label>
+        <input type="checkbox" id="calculate1-1RoundLoss" name="calculate1-1RoundLoss">
+        <br>
         <button type="button" onclick="runSimulation()">开始模拟</button>
     </form>
     <div id="results"></div>
