--- a/remake.html
+++ b/remake.html
@@ -96,8 +96,8 @@
                 {title: "卡组王牌", card: aceCard},
                 {title: "电子伙伴", card: companionCard},
                 {title: "对手王牌", card: opponentAceCard},
-                {title: "最喜爱的法术", card: spellCard},
-                {title: "最喜爱的护符", card: amuletCard}
+                {title: "剧情中期神秘人赠予的法术", card: spellCard},
+                {title: "变身时用的场地卡（？）", card: amuletCard}
             ]);
         }
 
