--- a/index.html
+++ b/index.html
@@ -63,30 +63,34 @@
 <hr> <!-- 这是分割线 -->
 
 <li>
-<a href="guess.html">影之诗猜卡（beta）</a>
+<a href="guess.html">影之诗猜卡</a>
 <span> - 测试你是否对影之诗的卡池足够了解</span>
 </li>
 
 <li>
-<a href="picGuess.html">影之诗认图（beta）</a>
+<a href="picGuess.html">影之诗认图</a>
 <span> - 测试你是否对影之诗的卡图足够了解</span>
 </li>
 
 <li>
-<a href="puzzle.html">影之诗关联（beta）</a>
+<a href="puzzle.html">影之诗关联</a>
 <span> - 测试你是否对影之诗的卡包与token足够了解</span>
 </li>
 
 <li>
-<a href="cross.html">影之诗分组（beta）</a>
+<a href="cross.html">影之诗分组</a>
 <span> - 影之诗综合考试！将给定的卡进行正确的分组。</span>
 </li>
 
 <li>
-<a href="kmrsb.html">挑战kmr（更新中）</a>
+<a href="kmrsb.html">挑战kmr</a>
 <span> - byd跳票辣，快来一起围攻光明顶战胜kmr吧。</span>
 </li>
 
+<li>
+    <a href="remake.html">szbf穿越测试器</a>
+    <span> - 看看你穿越到szbf后有没有资格当糕手。</span>
+</li>
 
 <hr> <!-- 这是分割线 -->
 
