--- a/index.html
+++ b/index.html
@@ -24,108 +24,112 @@
             <a href="rowen.html">龙友乐园</a>
             <span> - 测试你是否是纯正螺纹人的时候到了</span>
         </li>
-                <li>
+        <li>
             <a href="mysterian.html">法友乐园</a>
             <span> - 测试你是否能入学马纳利亚工程学院的时候到了</span>
         </li>
         <li>
-          <a href="arisa.html">妖友乐园</a>
-          <span> - 测试你是否能在鸭梨傻的森林里存活的时候到了</span>
-      </li>
-      <li>
-        <a href="luna.html">死友乐园</a>
-        <span> - 测试你是否会和xcw当朋友的时候到了</span>
-    </li>
-    <li>
-      <a href="vania.html">鬼友乐园</a>
-      <span> - 测试你是否当斑比酱的眷属的时候到了</span>
-  </li>
-      <li>
-      <a href="eris.html">教友乐园</a>
-      <span> - 测试你是否能入职圣堂的时候到了</span>
-  </li>
-</li>
-    <li>
-    <a href="erika.html">皇友乐园</a>
-    <span> - 测试你是否是大师级皇家护卫的时候到了</span>
-</li>
-<hr> <!-- 这是分割线 -->
-  <li>
-  <a href="bahamut.html">巴哈姆特的试炼</a>
-  <span> - 测试你能在巴哈姆特又双叒叕之怒下存活多久吧</span>
-</li>
+            <a href="arisa.html">妖友乐园</a>
+            <span> - 测试你是否能在鸭梨傻的森林里存活的时候到了</span>
+        </li>
+        <li>
+            <a href="luna.html">死友乐园</a>
+            <span> - 测试你是否会和xcw当朋友的时候到了</span>
+        </li>
+        <li>
+            <a href="vania.html">鬼友乐园</a>
+            <span> - 测试你是否当斑比酱的眷属的时候到了</span>
+        </li>
+        <li>
+            <a href="eris.html">教友乐园</a>
+            <span> - 测试你是否能入职圣堂的时候到了</span>
+        </li>
+        </li>
+        <li>
+            <a href="erika.html">皇友乐园</a>
+            <span> - 测试你是否是大师级皇家护卫的时候到了</span>
+        </li>
+        <hr> <!-- 这是分割线 -->
+        <li>
+            <a href="bahamut.html">巴哈姆特的试炼</a>
+            <span> - 测试你能在巴哈姆特又双叒叕之怒下存活多久吧</span>
+        </li>
 
-<li>
-<a href="angel.html">白银御门的试炼</a>
-<span> - 测试你是否比白银御门更值得使用天使卡组</span>
-</li>
+        <li>
+            <a href="angel.html">白银御门的试炼</a>
+            <span> - 测试你是否比白银御门更值得使用天使卡组</span>
+        </li>
 
-<hr> <!-- 这是分割线 -->
+        <hr> <!-- 这是分割线 -->
 
-<li>
-<a href="guess.html">影之诗猜卡</a>
-<span> - 测试你是否对影之诗的卡池足够了解</span>
-</li>
+        <li>
+            <a href="guess.html">影之诗猜卡</a>
+            <span> - 测试你是否对影之诗的卡池足够了解</span>
+        </li>
 
-<li>
-<a href="picGuess.html">影之诗认图</a>
-<span> - 测试你是否对影之诗的卡图足够了解</span>
-</li>
+        <li>
+            <a href="picGuess.html">影之诗认图</a>
+            <span> - 测试你是否对影之诗的卡图足够了解</span>
+        </li>
 
-<li>
-<a href="puzzle.html">影之诗关联</a>
-<span> - 测试你是否对影之诗的卡包与token足够了解</span>
-</li>
+        <li>
+            <a href="puzzle.html">影之诗关联</a>
+            <span> - 测试你是否对影之诗的卡包与token足够了解</span>
+        </li>
 
-<li>
-<a href="cross.html">影之诗分组</a>
-<span> - 影之诗综合考试！将给定的卡进行正确的分组。</span>
-</li>
+        <li>
+            <a href="cross.html">影之诗分组</a>
+            <span> - 影之诗综合考试！将给定的卡进行正确的分组。</span>
+        </li>
 
-<li>
-<a href="kmrsb.html">挑战kmr</a>
-<span> - byd跳票辣，快来一起围攻光明顶战胜kmr吧。</span>
-</li>
+        <li>
+            <a href="kmrsb.html">挑战kmr</a>
+            <span> - byd跳票辣，快来一起围攻光明顶战胜kmr吧。</span>
+        </li>
 
-<li>
-    <a href="remake.html">szbf穿越测试器</a>
-    <span> - 看看你穿越到szbf后有没有资格当糕手。</span>
-</li>
+        <li>
+            <a href="remake.html">szbf穿越测试器</a>
+            <span> - 看看你穿越到szbf后有没有资格当糕手。</span>
+        </li>
 
-<hr> <!-- 这是分割线 -->
+        <hr> <!-- 这是分割线 -->
 
-<li>
-<a href="sameChara.html">复刻数据库（搭建中）</a>
-<span> - 查看影之诗卡牌复刻数据库</span>
-</li>
+        <li>
+            <a href="sameChara.html">复刻数据库（搭建中）</a>
+            <span> - 查看影之诗卡牌复刻数据库</span>
+        </li>
 
-<li>
-<a href="tokens.html">影之诗Token</a>
-<span> - 查看所有影之诗被衍生的卡牌（包括可加入构筑的卡牌与自衍生）被调用的次数</span>
-</li>
+        <li>
+            <a href="tokens.html">影之诗Token</a>
+            <span> - 查看所有影之诗被衍生的卡牌（包括可加入构筑的卡牌与自衍生）被调用的次数</span>
+        </li>
 
-<li>
-    <a href="artifactMusic.html">造物音乐</a>
-    <span> - 你可以用造物的叫声来制作音(zao)乐(sheng)了</span>
-</li>
+        <li>
+            <a href="artifactMusic.html">造物音乐</a>
+            <span> - 你可以用造物的叫声来制作音(zao)乐(sheng)了</span>
+        </li>
 
-<hr> <!-- 这是分割线 -->
-
+        <hr> <!-- 这是分割线 -->
+        <li>
+            <a href="probs.html">我的虫虫呢？</a>
+            <span> - 游玩byd找不到虫？看看你多非洲人</span>
+        </li>
+        <hr> <!-- 这是分割线 -->
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">作者的阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
         </li>
-                <li>
+        <li>
             <a href="https://www.wdmota.com/" target="_blank">王迪魔塔</a>
             <span> - 想要玩一些不是szb的东西？这里有魔塔</span>
         </li>
 
-                        <li>
+        <li>
             <a href="https://store.steampowered.com/app/1477330/_/?l=schinese" target="_blank">魂之归宿</a>
             <span> - 如果你试了上面那个局的可以，你可以试试作者制作的魔塔</span>
         </li>
 
-<hr> <!-- 这是分割线 -->
+        <hr> <!-- 这是分割线 -->
 
         <li>
             <a href="https://space.bilibili.com/1058046640" target="_blank">典狱长的阿b地址</a>
